code-server routes

--- a/traefik/config/dynamic/gautham-code-server.yml
+++ b/traefik/config/dynamic/gautham-code-server.yml
@@ -1,12 +1,12 @@
 http:
   routers:
-    uptime:
+    gautham-code-server:
       rule: "Host(`gautham.lab.nexuswarrior.site`)"
       entryPoints:
         - websecure
       service: gautham-code-server
   services:
-    uptime:
+    gautham-code-server:
       loadBalancer:
         servers:
           - url: "http://192.168.10.29:8447"
