--- a/traefik/docker-compose.yaml
+++ b/traefik/docker-compose.yaml
@@ -7,26 +7,45 @@ services:
     image: traefik:latest
     container_name: traefik
     restart: always
+    #security_opt:
+      #- no-new-privilegs:true
+    secrets:
+      - cf-token # the secret ss
+    env_file:
+      - .env # store other secrets e.g., dashboard password
     networks:
        proxy:
     ports:
       - "80:80"
       - "443:443"
-    env_file:
-      - .env # store other secrets e.g., dashboard password
-    secrets:
-      - cf-token # the secret ss
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./config/traefik.yml:/etc/traefik/traefik.yml:ro
-      - ./config/dynamic:/etc/traefik/dynamic:ro
-      - ./config/acme.json:/acme.json
     environment:
       - TRAEFIK_DASHBOARD_CREDENTIALS=${TRAEFIK_DASHBOARD_CREDENTIALS}
       - CF_API_EMAIL=anand.krs@gmail.com # Cloudflare email
-      # - CF_DNS_API_TOKEN=YOUR-TOKEN # Cloudflare API Token
       - CF_DNS_API_TOKEN_FILE=/run/secrets/cf-token # see https://doc.traefik.io/traefik/https/acme/#providers
       # token file is the proper way to do it
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /etc/localtime:/etc/localtime:ro
+      - ./config/traefik.yml:/etc/traefik/traefik.yml:ro
+      - ./config/dynamic:/etc/traefik/dynamic:ro
+      - /home/dev/certfiles/acme.json:/acme.json
+      - ./logs:/var/log/traefik
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.traefik.entrypoints=web"
+      - "traefik.http.routers.traefik.rule=Host(`traefik.plexlab.site`)"
+      - "traefik.http.middlewares.traefik-auth.basicauth.users=${TRAEFIK_DASHBOARD_CREDENTIALS}"
+      - "traefik.http.middlewares.traefik-https-redirect.redirectscheme.scheme=https"
+      - "traefik.http.middlewares.sslheader.headers.customrequestheaders.X-Forwarded-Proto=https"
+      - "traefik.http.routers.traefik.middlewares=traefik-https-redirect"
+      - "traefik.http.routers.traefik-secure.entrypoints=websecure"
+      - "traefik.http.routers.traefik-secure.rule=Host(`traefik.plexlab.site`)"
+      - "traefik.http.routers.traefik-secure.middlewares=traefik-auth"
+      - "traefik.http.routers.traefik-secure.tls=true"
+      - "traefik.http.routers.traefik-secure.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.traefik-secure.tls.domains[0].main=plexlab.site"
+      - "traefik.http.routers.traefik-secure.tls.domains[0].sans=*.plexlab.site"
+      - "traefik.http.routers.traefik-secure.service=api@internal"
 networks:
   proxy:
     external: true # or comment this line to auto create the network
