--- a/traefik/config/traefik.yml
+++ b/traefik/config/traefik.yml
@@ -1,3 +1,7 @@
+api:
+  dashboard: true
+  insecure: true
+  debug: true
 entryPoints:
   web:
     address: ":80"
@@ -12,10 +16,15 @@ entryPoints:
       tls:
         certResolver: letsencrypt
         domains:
-          - main: "lab.nexuswarrior.site"
+          - main: "plexlab.site"
             sans:
-              - "*.lab.nexuswarrior.site"
+              - "*.plexlab.site"
+#serversTransport:
+  #insecureSkipVerify: true
 providers:
+  docker:
+    endpoint: "unix:///var/run/docker.sock"
+    exposedByDefault: false
   file:
     directory: "/etc/traefik/dynamic"
     watch: true
@@ -32,7 +41,8 @@ certificatesResolvers:
         resolvers:
           - "1.1.1.1:53"
           - "1.0.0.1:53"
-
-api:
-  dashboard: true
-  insecure: true
+log:
+  level: "INFO"
+  filePath: "/var/log/traefik/traefik.log"
+accessLog:
+  filePath: "/var/log/traefik/access.log"
