--- a/traefik/docker-compose.yaml
+++ b/traefik/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
   traefik:
     image: traefik:latest
     container_name: traefik
-    restart: restart-always
+    restart: always
     #security_opt:
       #- no-new-privilegs:true
     secrets:
