--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,6 +69,12 @@ jobs:
     if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
 
     steps:
+      - name: Clean workspace
+        run: |
+          # Clean up files created by Docker containers (may have different ownership)
+          sudo chown -R $USER:$USER $GITHUB_WORKSPACE 2>/dev/null || true
+          sudo git clean -fdx 2>/dev/null || true
+
       - name: Checkout code
         uses: actions/checkout@v4
 
