--- a/servarr/compose.yaml
+++ b/servarr/compose.yaml
@@ -5,8 +5,8 @@
 # the read me file for more information.
 
 #############################################################################
-# NOTICE: We recently switched to using a .env file. PLEASE refer to the docs.
-# https://github.com/TechHutTV/homelab/tree/main/media#docker-compose-and-env
+# Environment variables are hardcoded in this file (PUID, PGID, TZ)
+# Secrets should be managed via GitHub Secrets and deployment pipeline
 #############################################################################
 
 networks:
@@ -29,16 +29,15 @@ services:
       servarrnetwork:
         ipv4_address: 172.39.0.2
     ports:
-      #- ${FIREWALL_VPN_INPUT_PORTS}:${FIREWALL_VPN_INPUT_PORTS} # airvpn forwarded port, pulled from .env
+      #- 12345:12345 # VPN forwarded port (configure if using VPN)
       - 8080:8080 # qbittorrent web interface
       - 6881:6881 # qbittorrent torrent port
       - 6789:6789 # nzbget
       - 9696:9696 # prowlarr
     volumes:
       - ./gluetun:/gluetun
-    # Make a '.env' file in the same directory.
-    env_file:
-      - .env
+    environment:
+      - TZ=America/Los_Angeles
     healthcheck:
       test: ping -c 1 www.google.com || exit 1
       interval: 20s
@@ -53,11 +52,11 @@ services:
     labels:
       - deunhealth.restart.on.unhealthy=true
     environment:
-      - PUID=${PUID}
-      - PGID=${PGID}
-      - TZ=${TZ}
+      - PUID=1000
+      - PGID=1000
+      - TZ=America/Los_Angeles
       - WEBUI_PORT=8080 # must match "qbittorrent web interface" port number in gluetun's service above
-      - TORRENTING_PORT=${FIREWALL_VPN_INPUT_PORTS} # airvpn forwarded port, pulled from .env
+      #- TORRENTING_PORT=12345 # VPN forwarded port (configure if using VPN)
     volumes:
       - ./qbittorrent:/config
       - /media:/data
@@ -81,7 +80,7 @@ services:
     environment:
       - LOG_LEVEL=info
       - HEALTH_SERVER_ADDRESS=127.0.0.1:9999
-      - TZ=${TZ}
+      - TZ=America/Los_Angeles
     restart: always
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
@@ -90,9 +89,9 @@ services:
     image: lscr.io/linuxserver/nzbget:latest
     container_name: nzbget
     environment:
-      - PUID=${PUID}
-      - PGID=${PGID}
-      - TZ=${TZ}
+      - PUID=1000
+      - PGID=1000
+      - TZ=America/Los_Angeles
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./nzbget:/config
@@ -108,9 +107,9 @@ services:
     image: lscr.io/linuxserver/prowlarr:latest
     container_name: prowlarr
     environment:
-      - PUID=${PUID}
-      - PGID=${PGID}
-      - TZ=${TZ}
+      - PUID=1000
+      - PGID=1000
+      - TZ=America/Los_Angeles
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./prowlarr:/config
@@ -126,9 +125,9 @@ services:
     container_name: sonarr
     restart: unless-stopped
     environment:
-      - PUID=${PUID}
-      - PGID=${PGID}
-      - TZ=${TZ}
+      - PUID=1000
+      - PGID=1000
+      - TZ=America/Los_Angeles
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./sonarr:/config
@@ -150,9 +149,9 @@ services:
     container_name: radarr
     restart: unless-stopped
     environment:
-      - PUID=${PUID}
-      - PGID=${PGID}
-      - TZ=${TZ}
+      - PUID=1000
+      - PGID=1000
+      - TZ=America/Los_Angeles
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./radarr:/config
@@ -178,9 +177,9 @@ services:
       - ./lidarr:/config
       - /media:/data
     environment:
-      - PUID=${PUID}
-      - PGID=${PGID}
-      - TZ=${TZ}
+      - PUID=1000
+      - PGID=1000
+      - TZ=America/Los_Angeles
     ports:
       - 8686:8686
     labels:
@@ -198,9 +197,9 @@ services:
     container_name: bazarr
     restart: unless-stopped
     environment:
-      - PUID=${PUID}
-      - PGID=${PGID}
-      - TZ=${TZ}
+      - PUID=1000
+      - PGID=1000
+      - TZ=America/Los_Angeles
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./bazarr:/config
