--- a/homelab/twingate/docker-compose.yaml
+++ b/homelab/twingate/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
       - TWINGATE_NETWORK=${TWINGATE_NETWORK}
       - TWINGATE_ACCESS_TOKEN=${TWINGATE_ACCESS_TOKEN}
       - TWINGATE_REFRESH_TOKEN=${TWINGATE_REFRESH_TOKEN}
-      - TWINGATE_LOG_LEVEL=info
+      - TWINGATE_LOG_LEVEL=4
       - TWINGATE_LOG_ANALYTICS=v1
     networks:
       - proxy
