--- a/teaching/coder/docker-compose.yaml
+++ b/teaching/coder/docker-compose.yaml
@@ -9,6 +9,9 @@ services:
       # Database - using PostgreSQL
       CODER_PG_CONNECTION_URL: "postgresql://coder:${CODER_DB_PASSWORD}@postgres:5432/coder?sslmode=disable"
 
+      # HTTP Server - Listen on all interfaces for Traefik
+      CODER_HTTP_ADDRESS: "0.0.0.0:3000"
+
       # Access URL - Update this to your domain
       CODER_ACCESS_URL: "https://coder.lab.nexuswarrior.site"
 
