Fix Coder workspace container initialization
- Fix container exiting immediately by adding agent init script
- Add coder_app resource for code-server
- Update Dockerfile CMD to keep container alive
- Fix workspace naming to use workspace ID instead of owner
- Add comprehensive workspace setup guide

--- a/teaching/coder/templates/fll-python/Dockerfile
+++ b/teaching/coder/templates/fll-python/Dockerfile
@@ -124,5 +124,5 @@ RUN echo '#!/usr/bin/zsh' > /home/coder/.welcome.sh && \
 # Add welcome to zshrc
 RUN echo 'bash ~/.welcome.sh' >> /home/coder/.zshrc
 
-# Default command
-CMD ["/bin/bash"]
+# Coder agent will override CMD, so this is just a fallback
+CMD ["/bin/bash", "-c", "sleep infinity"]
