coder workspace fixes

--- a/teaching/coder/docker-compose.yaml
+++ b/teaching/coder/docker-compose.yaml
@@ -28,6 +28,8 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /home/dev/docker/coder/data:/home/coder/.config/coderv2
+    group_add:
+      - "988"
 
     labels:
       # Traefik configuration
