Setup automated GitHub authentication for workspaces
  - Add GitHub PAT support for repository cloning
  - Auto-clone robotics repo on workspace startup
  - Install dependencies from requirements.txt automatically
  - Configure git credentials for push/pull operations
  - Add GitHub token to deployment workflow

--- a/teaching/coder/.env.example
+++ b/teaching/coder/.env.example
@@ -1,4 +1,9 @@
 # Coder Database Password
 CODER_DB_PASSWORD=your-secure-password-here
 
-# Generate with: openssl rand -base64 32
+# GitHub Personal Access Token for cloning repositories in workspaces
+GITHUB_TOKEN=ghp_your_token_here
+
+# Generate database password with: openssl rand -base64 32
+# Generate GitHub token at: https://github.com/settings/tokens
+# Required scopes: repo (Full control of private repositories)
