--- a/teaching/coder/docker-compose.yaml
+++ b/teaching/coder/docker-compose.yaml
@@ -25,6 +25,9 @@ services:
       # Resources
       CODER_PROVISIONER_DAEMONS: "2"       # Number of provisioner workers
 
+      # GitHub Token for workspace templates
+      TF_VAR_github_token: "${GITHUB_TOKEN}"
+
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /home/dev/docker/coder/data:/home/coder/.config/coderv2
