Setup configurable GitHub authentication for workspaces
  - Make repository URL configurable via GITHUB_REPO_URL
  - Add automated Docker image rebuild to deployment workflow
  - Auto-restart Coder after deployment
  - Support for multiple teams with different repos
  - Smart git credential handling for any Git provider

--- a/teaching/coder/.env.example
+++ b/teaching/coder/.env.example
@@ -4,6 +4,9 @@ CODER_DB_PASSWORD=your-secure-password-here
 # GitHub Personal Access Token for cloning repositories in workspaces
 GITHUB_TOKEN=ghp_your_token_here
 
+# GitHub Repository URL (without https://)
+GITHUB_REPO_URL=github.com/AnandSingh/robotics
+
 # Generate database password with: openssl rand -base64 32
 # Generate GitHub token at: https://github.com/settings/tokens
 # Required scopes: repo (Full control of private repositories)
