--- a/teaching/coder/docker-compose.yaml
+++ b/teaching/coder/docker-compose.yaml
@@ -25,8 +25,9 @@ services:
       # Resources
       CODER_PROVISIONER_DAEMONS: "2"       # Number of provisioner workers
 
-      # GitHub Token for workspace templates
+      # GitHub credentials for workspace templates
       TF_VAR_github_token: "${GITHUB_TOKEN}"
+      TF_VAR_github_repo_url: "${GITHUB_REPO_URL}"
 
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
